--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "test": "vendor/bin/phpunit",
         "format": "vendor/bin/pint"
     },
-    "homepage": "https://github.com/spork-app/shopping",
+    "homepage": "https://github.com/spork-app/weather",
     "keywords": [
         "spork-plugins"
     ],
